Added stubbed out logic for handling webhook payloads and storing activity.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,12 @@ micronaut:
   application:
     name: strava
 
+strava:
+  challenge:
+    verifyToken:
+  client:
+    refreshToken:
+
 endpoints:
   all:
     enabled: false
