Added logic for writing to bucket

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,12 @@ micronaut:
     name: strava
 
 strava:
-  challenge:
-    verifyToken:
+  challengeVerifyToken:
   client:
     refreshToken:
+
+gcp:
+  bucketName:
 
 endpoints:
   all:
