Initial work on webhook endpoint (#2)
* Added stubbed out logic for handling webhook payloads and storing activity.

* Added logic for writing to bucket

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,14 @@ micronaut:
   application:
     name: strava
 
+strava:
+  challengeVerifyToken:
+  client:
+    refreshToken:
+
+gcp:
+  bucketName:
+
 endpoints:
   all:
     enabled: false
