Added fetching of activity from Strava on webhook event

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,9 @@ micronaut:
 
 strava:
   challengeVerifyToken:
-  client:
-    refreshToken:
+  clientId:
+  clientSecret:
+  refreshToken:
 
 gcp:
   bucketName:
