Added authenticated backfill endpoint

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,16 +3,13 @@ micronaut:
     name: cassius
   security:
     enabled: true
-    oauth2:
-      enabled: true
-      clients:
-        auth0:
-          client-id:
-          client-secret:
-    endpoints:
-      logout:
+    token:
+      jwt:
         enabled: true
-        get-allowed: true
+        signatures:
+          jwks:
+            auth0:
+              url: https://merricklabs.us.auth0.com/.well-known/jwks.json
 
 strava:
   challengeVerifyToken:
