Added authenticated backfill endpoint (#6)
* Added auth to endpoints

* Added authenticated backfill endpoint

* Removed unused config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,15 @@
 micronaut:
   application:
-    name: strava
+    name: cassius
+  security:
+    enabled: true
+    token:
+      jwt:
+        enabled: true
+        signatures:
+          jwks:
+            auth0:
+              url: https://merricklabs.us.auth0.com/.well-known/jwks.json
 
 strava:
   challengeVerifyToken:
