--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,3 +1,23 @@
+micronaut:
+  application:
+    name: cassius
+  security:
+    enabled: false
+
+endpoints:
+  all:
+    enabled: false
+  health:
+    enabled: true
+
+jackson:
+  mapper:
+    ACCEPT_CASE_INSENSITIVE_ENUMS: true
+  bean-introspection-module: true
+  serializationInclusion: NON_NULL
+  deserialization:
+    failOnUnknownProperties: false
+
 strava:
   challengeVerifyToken: banana
   clientId: banana
