Added activity loading into BigQuery after creation

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,10 @@ strava:
 gcp:
   bucketName:
 
+bigQuery:
+  datasetName: cassius
+  tableName: activities
+
 endpoints:
   all:
     enabled: false
