--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -25,4 +25,8 @@ strava:
   refreshToken: banana
 
 gcp:
-  bucketName: banana
+  bucketName: cassius
+
+bigQuery:
+  datasetName: cassius
+  tableName: activities
